[gd_scene load_steps=6 format=3 uid="uid://cs3nkufghh4vm"]

[ext_resource type="Script" uid="uid://1so58lwsljdv" path="res://addons/GBIS/GBIS_demos/2_equipment_slot/equipment_slot.gd" id="1_7ss7o"]
[ext_resource type="Script" uid="uid://c5rou3jm33pbt" path="res://addons/GBIS/addons/grid_base_inventory_system/core/view/item/drop_area_view.gd" id="2_hujb4"]
[ext_resource type="Script" uid="uid://b3x4mwtjmm4tp" path="res://addons/GBIS/addons/grid_base_inventory_system/core/view/container/inventory/inventory_view.gd" id="3_atwav"]
[ext_resource type="Script" uid="uid://dg6xjko3rdcta" path="res://addons/GBIS/addons/grid_base_inventory_system/core/view/slot/equipment_slot_view.gd" id="3_kwvbn"]
[ext_resource type="Texture2D" uid="uid://dxusr1agnbuhw" path="res://addons/GBIS/GBIS_demos/assets/ui/boots_background.png" id="4_7ss7o"]

[node name="EquipmentSlot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ss7o")

[node name="DropAreaView" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 3746.0
offset_bottom = 2126.0
script = ExtResource("2_hujb4")
metadata/_custom_type_script = "uid://c5rou3jm33pbt"

[node name="Inventory" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 220.0
offset_top = 96.0
offset_right = 558.0
offset_bottom = 554.0
color = Color(0.17027, 0.17027, 0.17027, 1)

[node name="InventoryView" type="Control" parent="Inventory"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -159.5
offset_top = -393.0
offset_right = 160.5
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_atwav")
container_name = "demo2_inventory"
container_columns = 10
container_rows = 12
stack_num_font_size = 12
stack_num_margin = 2
stack_num_color = Color(0.856916, 0.880705, 0.757161, 1)
metadata/_custom_type_script = "uid://b3x4mwtjmm4tp"

[node name="Label" type="Label" parent="Inventory"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.0
offset_right = 83.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonCloseInventory" type="Button" parent="Inventory"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -69.0
offset_top = 9.0
offset_right = -10.0
offset_bottom = 54.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 28
text = "X"

[node name="Character" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 568.0
offset_top = 96.0
offset_right = 890.0
offset_bottom = 439.0
color = Color(0.17027, 0.17027, 0.17027, 1)

[node name="Label" type="Label" parent="Character"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_top = 3.0
offset_right = 112.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Character"
horizontal_alignment = 1

[node name="ButtonCloseStorage" type="Button" parent="Character"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -67.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 55.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 28
text = "X"

[node name="EquipmentSlotView1" type="Control" parent="Character"]
anchors_preset = 0
offset_left = 90.0
offset_top = 91.0
offset_right = 234.0
offset_bottom = 235.0
script = ExtResource("3_kwvbn")
slot_name = "demo2_slot_1"
base_size = 48
columns = 3
rows = 3
background = ExtResource("4_7ss7o")
avilable_types = Array[String](["BOOTS"])
metadata/_custom_type_script = "uid://dg6xjko3rdcta"

[node name="EquipmentSlotView2" type="Control" parent="Character"]
anchors_preset = 0
offset_left = 92.0
offset_top = 248.0
offset_right = 156.0
offset_bottom = 312.0
script = ExtResource("3_kwvbn")
slot_name = "demo2_slot_2"
background = ExtResource("4_7ss7o")
avilable_types = Array[String](["BOOTS"])
metadata/_custom_type_script = "uid://dg6xjko3rdcta"

[node name="EquipmentSlotView3" type="Control" parent="Character"]
anchors_preset = 0
offset_left = 169.0
offset_top = 248.0
offset_right = 233.0
offset_bottom = 312.0
script = ExtResource("3_kwvbn")
slot_name = "demo2_slot_2"
background = ExtResource("4_7ss7o")
avilable_types = Array[String](["BOOTS"])
metadata/_custom_type_script = "uid://dg6xjko3rdcta"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 38.0
offset_top = 96.0
offset_right = 176.0
offset_bottom = 267.0

[node name="ButtonToggleInventory" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Toggle Inventory"

[node name="ButtonToggleCharacterInfo" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Toggle Character"

[node name="ButtonAddTestItems" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Add Test Items"

[node name="ButtonSave" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="ButtonLoad" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Label" type="Label" parent="."]
offset_left = 569.0
offset_top = 446.0
offset_right = 1115.0
offset_bottom = 495.0
text = "The two small equipment slots share the same name,
so they mirror each other."

[node name="Label3" type="Label" parent="."]
offset_left = 812.0
offset_top = 228.0
offset_right = 1185.0
offset_bottom = 329.0
text = "This slot is 3x3, 
the boots are 2x2, 
so it looks like there is a margin 
when equipped."

[node name="Label2" type="Label" parent="."]
offset_left = 402.0
offset_top = 65.0
offset_right = 861.0
offset_bottom = 94.0
text = "Right click to quick equip and unequip"

[connection signal="pressed" from="Inventory/ButtonCloseInventory" to="." method="_on_button_close_inventory_pressed"]
[connection signal="pressed" from="Character/ButtonCloseStorage" to="." method="_on_button_close_storage_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonToggleInventory" to="." method="_on_button_toggle_inventory_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonToggleCharacterInfo" to="." method="_on_button_toggle_storage_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonAddTestItems" to="." method="_on_button_add_test_items_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSave" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLoad" to="." method="_on_button_load_pressed"]
